[tool.poetry]
name = "validator"
version = "0.1.4"
description = ""
authors = ["Dumitru Dan Smaranda <dan.smaranda@uni.lu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
# TODO: Check in with shap for their next maintanance release
# numpy = "<1.24.0"
numpy = "1.24.0"
scipy = "^1.10.1"
matplotlib = "^3.7.1"
shap = "^0.41.0"
loggerino = {path = "../loggerino", develop = true}

[tool.poetry.group.dev.dependencies]
xgboost = "^1.7.5"
pylint = "^2.17.2"
black = "^23.3.0"
isort = "^5.12.0"
pytest = "^7.3.0"
ipython = "^8.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
